# src/dto/auth.dto.ts
@@ -1,4 +1,12 @@
-import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
+import { Gender } from '@prisma/client';
+import { Transform } from 'class-transformer';
+import {
+  IsEmail,
+  IsEnum,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+} from 'class-validator';
 
 export class RegisterRequestDTO {
   @IsString()
@@ -35,7 +43,7 @@ export class ResetRequestDTO {
 
   @IsString()
   @IsNotEmpty()
-  new_password!: string;
+  newPassword!: string;
 }
 
 export class GoogleSignInDTO {
@@ -54,4 +62,41 @@ export class RefreshRequestDTO {
   @IsString()
   @IsNotEmpty()
   refreshToken!: string;
+}
+
+export class ProfileRequestDTO {
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  name?: string;
+
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  board?: string;
+
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  subject?: string;
+
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  standard?: string;
+
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  language?: string;
+
+  @IsOptional()
+  @IsString()
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  profile?: string;
+
+  @IsOptional()
+  @IsEnum(Gender, { message: 'gender must be male, female, or other' })
+  @Transform(({ value }) => (value === '' ? undefined : value))
+  gender?: Gender;
 }
